[gd_scene load_steps=3 format=3 uid="uid://l0r1l4j71uxt"]

[ext_resource type="Script" path="res://menu.gd" id="1_ivl68"]
[ext_resource type="Texture2D" uid="uid://d3o8lvxmp3hai" path="res://asety/t≈Ço2.png" id="2_3aau2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ivl68")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = -120.0
offset_top = -92.0
offset_right = 123.0
offset_bottom = -40.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "B.O.R.
Bardzo Oryginalny Runner"
horizontal_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = 52.0
offset_right = 192.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Skok - w/spacebar"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Lewo - a"

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Prawo - d "

[node name="VSeparator4" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Restart - r"

[node name="VSeparator5" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = -1136.0
offset_top = -564.0
offset_right = 784.0
offset_bottom = 516.0
scale = Vector2(2.10931, 1.78726)
texture = ExtResource("2_3aau2")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
